# libsparseir

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  Doxyfile  README.md  README.md.bak  _build_fortran.sh  build_capi.sh  build_capi_with_tests.sh  build_fortran.sh  build_with_tests.sh  debug.sh  fix_expanded_names.py  generate_docs.sh  generate_sparseir_ext_func_impl.py  main.cpp  run.sh  sparseir_ext_expanded.F90  sparseir_ext_expanded_fixed.F90  sparseir_ext_expanded_fixed2.F90  update_version.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
back/: build_capi_with_asan.sh  build_optimized.sh
backend/cxx/: CMakeLists.txt  README.md  build_capi_with_tests.sh  morse_LICENCE.txt
backend/cxx/include/sparseir/: basis.hpp  dlr.hpp  freq.hpp  funcs.hpp  gauss.hpp  gemm.hpp  jacobi_svd.hpp  kernel.hpp  root.hpp  sparseir-fwd.hpp  sparseir.h  specfuncs.hpp  spir_status.h  sve.hpp  version.h
backend/cxx/include/sparseir/impl/: kernel_impl.ipp  linalg_impl.ipp  root_impl.ipp  sve_impl.ipp
backend/cxx/src/: cinterface.cpp  gemm.cpp  gemm_external.impl  gemm_link.impl  linalg.cpp  svd.cpp  sve.cpp
backend/cxx/src/cinterface_impl/: _util.hpp  helper_funcs.hpp  helper_types.hpp
backend/cxx/test/: CMakeLists.txt  _utils.hpp  cinterface_core.cxx  cinterface_dlr.cxx  dlr.cxx  kernel.cxx  sve.cxx
backend/cxx/test/cpp/: CMakeLists.txt  gemm.cxx  linalg.cxx  poly.cxx
backend/cxx/test/fortran/: CMakeLists.txt  input.in  test_ext.f90
backend/test/: CMakeLists.txt
benchmark/: README.md  benchmark1.c
bundle/: .gitignore  Makefile  Makefile.bundle  build.sh  configure.ac
capi_benchmark/: benchmark1.c  result-blas  result-eigen-internal  run.sh  run_with_cxx_blas.sh  run_with_cxx_wo_blas.sh  tmp
capi_sample/: CMakeLists.txt  README.md  run_sample.sh  sample1.c  sample2.c  sample3.c  test_with_installed_backend.sh
capi_test/: CMakeLists.txt  _utils.hpp  cinterface_core.cxx  cinterface_custom_kernel.cxx  cinterface_integration.cxx  test_with_cxx_backend.sh
cmake/: sparseir-fortran-config.cmake.in  sparseirConfig.cmake.in
fortran/: CMakeLists.txt  README.md  _capi.f90  _capi.inc  _capi_finite_temp_basis.inc  _capi_kernel.inc  _capi_sve_result.inc  _cbinding.inc  _cbinding_new.inc  _cbinding_public.inc  _fortran_assign.inc  _fortran_funcs.inc  _fortran_proc.inc  _fortran_types.inc  _fortran_types_public.inc  _impl.f90  _impl.inc  _impl_finite_temp_basis.inc  _impl_kernel.inc  _impl_types.inc  _kernel_capi.f90  _kernel_impl.f90  _kernel_proc.f90  _kernel_type.f90  _proc.f90  _proc.inc  _proc_finite_temp_basis.inc  _public.f90  _public.inc  _public_kernel.f90  _public_sve_result.f90  _sve_result_capi.f90  _sve_result_impl.f90  _sve_result_impl_add.f90  _sve_result_proc.f90  _sve_result_type.f90  _type.f90  _type.inc  dlr2ir_impl.fh  dlr2ir_impl.inc  (+27 more)
fortran/old/: _impl.inc  _impl_sve_result.inc  _proc.inc  _proc_kernel.inc  _proc_sve_result.inc  _public.inc
fortran/sample/: CMakeLists.txt  build_and_run.sh  run.sh  second_order_gkf_gamma.txt  second_order_gkl_gamma.txt  second_order_gkt_gamma.txt  second_order_gkt_m.txt  second_order_grt_r_0.txt  second_order_perturbation_fort.f90  second_order_skf_gamma.txt  second_order_skl_gamma.txt  second_order_srl_r_0.txt  second_order_srt_r_0.txt
fortran/test/: CMakeLists.txt  generate_fortran_test.py  test_ext.f90  test_integration.f90  test_kernel.f90
python/: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  build_cffi.py  build_conda.sh  dev.sh  dgemm_wrapper.c  list_conda_contents.py  output  prepare_build.py  pyproject.toml  run_tests.sh  setup.py  setup_build.py  setup_conda_path.sh  test.py  version.py.in
python/conda-recipe/: build.bat  conda_build_config.yaml  meta.yaml
python/pylibsparseir/: __init__.py  clean_build_artifacts.py  constants.py  core.py  ctypes_autogen.py  ctypes_wrapper.py
python/sparseir/: MANIFEST.in  __init__.py  constants.py  core.py  setup.py  types.py
python/src/libsparseir/: __init__.py
python/src/sparse_ir/: __init__.py  abstract.py  augment.py  basis.py  basis_set.py  dlr.py  kernel.py  poly.py  sampling.py  sve.py
python/tests/: __init__.py  conftest.py  test_advanced_features.py  test_augment.py  test_basis.py  test_basis_set.py  test_core.py  test_dlr.py  test_kernel.py  test_libsparseir.py  test_poly.py  test_sampling.py  test_sampling_advanced.py  test_sve.py  test_sve_advanced.py
python/tests/c_api/: __init__.py  comprehensive_tests.py  core_tests.py  dlr_tests.py  integration_tests.py  sampling_tests.py
python/tools/: gen_ctypes.py
python/tutorials/: GW_py.py  TPSC_py.py  analytic_continuation_py.py  dlr_py.py  eliashberg_holstein_py.py  flex_py.py  ir_py.py  liechtenstein_py.py  orbital_magnetic_susceptibility_py.py  second_order_perturbation_py.py  sparse_sampling_demo_py.py  sparse_sampling_py.py  spm_py.py
python/work/: info-pylibsparseir-0.5.2-py313h2471540_0.tar.zst  metadata.json  pkg-pylibsparseir-0.5.2-py313h2471540_0.tar.zst  pylibsparseir-0.5.2-py313h2471540_0.conda
sample_c/: CMakeLists.txt  README.md  extract_codeblocks.py  readme_sample1.c  readme_sample2.c  readme_sample3.c  sample1.c  sample2.c  sample3.c  sample_c.md
test/: CMakeLists.txt  _basis.cxx  _cinterface_utils.hpp  _linalg.cxx  _root.cxx  _specfuncs.cxx  _utils.hpp  augment.cxx  basis.cxx  basis_set.cxx  cinterface.cxx  cinterface_core.cxx  cinterface_dlr.cxx  cinterface_integration.cxx  cinterface_sampling.cxx  dlr.cxx  example.cxx  freq.cxx  gauss.cxx  kernel.cxx  linalg.cxx  poly.cxx  root.cxx  sampling.cxx  specfuncs.cxx  svd.cxx  sve.cxx  sve_cache.hpp  utils.cxx
test/cpp/: CMakeLists.txt  _utils.hpp  augment.cxx  basis.cxx  cinterface_core.cxx  cinterface_dlr.cxx  cinterface_integration.cxx  cinterface_sampling.cxx  contraction.cxx  dlr.cxx  freq.cxx  gauss.cxx  gemm.cxx  kernel.cxx  linalg.cxx  poly.cxx  root.cxx  sampling.cxx  specfuncs.cxx  svd.cxx  sve.cxx  utils.cxx
test/fortran/: CMakeLists.txt  second_order_perturbation_fort.f90  test_ext.f90  test_integration.f90
testsample/: CMakeLists.txt  README.md  generate_test.py  run_samples.py
(+125 files in other folders)
