AC_INIT([libsparseir], [1.0.0])
AM_INIT_AUTOMAKE([foreign])

# Check for C compiler
AC_PROG_CC
AC_PROG_CXX
AC_PROG_FC

# Check for required tools
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Set installation paths
AC_PREFIX_DEFAULT(/usr/local)

# Output files
AC_CONFIG_FILES([
    Makefile
    src/Makefile
    include/Makefile
    fortran/Makefile
])

AC_OUTPUT 