[project]
name = "pysparseir"
version = "0.1.0"
description = "Python bindings for the libsparseir library, providing efficient sparse intermediate representation for many-body physics calculations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
]
authors = [
    {name = "SpM-lab"}
]
license = "MIT"
keywords = ["physics", "many-body", "green-functions", "sparse-ir"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/SpM-lab/pysparseir"
Repository = "https://github.com/SpM-lab/pysparseir"
"Bug Tracker" = "https://github.com/SpM-lab/pysparseir/issues"

[build-system]
requires = ["setuptools", "wheel", "cibuildwheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "admmsolver>=0.7.7",
    "ipykernel>=6.29.5",
    "jupytext>=1.17.2",
    "matplotlib>=3.10.3",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
